--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Post</h1>
+<div class="container">
+  <div class="columns">
+    <div class="column col-6 col-sm-12 col-mx-auto">
+      <h1>Editing Post</h1>
 
-<%= render 'form', post: @post %>
+      <%= render 'form', post: @post %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+      <%= link_to 'Show', @post %> |
+      <%= link_to 'Back', posts_path %>
+    </div>
+  </div>
+</div>
