--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,7 @@
 
   <body>
     <%= yield %>
+    <%= javascript_pack_tag 'application' %>
+    <%= javascript_pack_tag 'hello_react' %>
   </body>
 </html>
