--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@media screen and (max-width: 600px) {
+  .mobile-display-block {
+    display: block;
+  }
+
+  .mobile-display-inline-block {
+    display: inline-block;
+  }
+
+  .table td {
+    border-bottom: none;
+  }
+
+  .table tr {
+    border-bottom: .05rem solid #e7e9ed;
+    padding: .6rem .4rem;
+  }
+}
